static/css/base.css
@import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");

:root {
  --dark: #011627;
  --burgendy: #7d1224;
  --blue: #2b70a1;
  --lavender: #fdeded;
  --white: #ffffff;
  --navbar-bg-contrast: hsl(0, 0%, 25%);
  --navbar-height: 64px;

  --main-font: 'Varela Round', sans-serif;
  --h1-padding: 35px;
  --h1-size: 2rem;
}

/* General styles */

* {
  margin: 0;
  padding: 0;
}

body {
  font-family: var(--main-font);
  /* background-color: var(--burgendy); */
  letter-spacing: .5px;
}

ul {
  padding-left: 0;
}

.flex-container {
  padding-left: 1.4rem;
  padding-right: 1.4rem;
  display: flex;
}

.overflow-hidden {
  overflow: hidden;
  position: relative;
}

.page-container {
  margin-top: var(--navbar-height);
}

.center-content {
	position: relative;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	width: 100%;
}

/* Navigation bar */

/* Source - responsive navigation bar sourced and tweaked to spec from https://www.aleksandrhovhannisyan.com/blog/responsive-navbar-without-bootstrap/ */

.navbar-container {
  justify-content: space-between;
  height: 100%;
  align-items: center;
  font-size: 120%;
}

.navbar-item {
  margin: 0.4em;
} 

.brand-link,
.navbar-link {
  color: var(--lavender);
  transition: color 0.2s ease-in-out;
  text-decoration: none;
  font-weight: 400;
  transition: background-color 0.2s ease-in-out,
              color 0.2s ease-in-out;
  font-size: 110%;
}

.brand-link:focus,
.brand-link:hover {
  color: var(--white);
}

.navbar-link {
  width: 100%;
  padding: 0.4em 0.4em;
  border: none;
  background-color: transparent;
}

.navbar-link:focus,
.navbar-link:hover {
    color: var(--white);
    background-color: var(--navbar-bg-contrast);
}

.navbar-toggle {
  cursor: pointer;
  border: none;
  background-color: transparent;
  width: 40px;
  height: 40px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.navbar-menu {
  position: fixed;
  top: var(--navbar-height);
  bottom: 0;
  transition: opacity 0.2s ease-in-out,
              visibility 0.2s ease-in-out;
  opacity: 0;
  visibility: hidden;
  left: 0;
  right: 0;
}

.icon-bar {
  display: block;
  width: 25px;
  height: 2px;
  margin: 3px;
  transition: background-color 0.2s ease-in-out,
              transform 0.2s ease-in-out,
              opacity 0.2s ease-in-out;
  background-color: var(--lavender);
}

.mobile-icon-list {
  list-style-type: none;
  display: flex;
  margin-bottom: 0;
}

.mobile-icon-btn {
  padding: 0.4em 0.4em;
  color: var(--lavender);
  background-color: transparent;
  transition: color 0.2s ease-in-out;
  display: flex;
  align-items: center;
  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
  border: none;
}

.mobile-icons {
  padding: 0.4em 0.4em;
  text-decoration: none;
}

.navbar-toggle:focus .icon-bar,
.navbar-toggle:hover .icon-bar {
    background-color: var(--white);
}

.navbar-links {
  list-style-type: none;
  max-height: 0;
  overflow: hidden;
  position: absolute;
  background-color: var(--burgendy);
  display: flex;
  flex-direction: column;
  align-items: center;
  left: 0;
  right: 0;
  margin: 1.4rem;
  border-radius: 5px;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
}

#navigation-bar.opened .navbar-links {
  padding: 1em;
  max-height: none;
}

#navigation-bar {
  position: fixed;
  height: var(--navbar-height);
  background-color: var(--burgendy);
  left: 0;
  right: 0;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
  z-index: 50;
}

#navigation-bar.opened .navbar-menu {
  background-color: rgba(0, 0, 0, 0.4);
  opacity: 1;
  visibility: visible;
}

#navigation-bar.opened .navbar-toggle .icon-bar:first-child,
#navigation-bar.opened .navbar-toggle .icon-bar:last-child {
    position: absolute;
    margin: 0;
    width: 30px;
}

#navigation-bar.opened .navbar-toggle .icon-bar:first-child {
    transform: rotate(45deg);
}

#navigation-bar.opened .navbar-toggle .icon-bar:nth-child(2) {
    opacity: 0;
}

#navigation-bar.opened .navbar-toggle .icon-bar:last-child {
    transform: rotate(-45deg);
}

@media screen and (min-width: 768px) {
  .navbar-toggle {
      display: none;
  }

  #navigation-bar .navbar-menu,
  #navigation-bar.opened .navbar-menu {
      visibility: visible;
      opacity: 1;
      position: static;
      display: block;
      height: 100%;
  }

  #navigation-bar .navbar-links,
  #navigation-bar.opened .navbar-links {
      margin: 0;
      padding: 0;
      box-shadow: none;
      position: static;
      flex-direction: row;
      list-style-type: none;
      max-height: max-content;
      width: 100%;
      height: 100%;
  }

  #navigation-bar .navbar-link:last-child {
      margin-right: 0;
  }
}

/* Footer */

footer {
  height: 120px;
  background-color: var(--burgendy);
  justify-content: center;
  align-items: center;
  flex-direction: column;
  font-size: 130%;
  padding-top: 10px;
}

footer ul {
  list-style-type: none;
  padding-top: 10px;
}

footer ul li a {
  text-decoration: none;
  color: var(--lavender);
  text-decoration: none;
  padding: 5px;
}

.footer-link a i {
  font-size: 130%;
}

#footer ul li {
  display: inline
}

/* Wishlist and basket sidebars */

.sidebar {
  background-color: grey;
  height: 100vh;
  z-index: 50;
  position: fixed;
  width: 100vw;
  top: 0;
  right: -105%;
  overflow-x: hidden;
  transition: 1.25s;
}

.sidebar-opened {
  right: 0;
}

.sidebar-header {
  margin-top: 30px;
  font-size: 200%;
  margin-bottom: 15px;
}

.empty-sidebar {
  font-size: 1.5rem;
}

button.close-sidebar {
  border: none;
  background: transparent;
  position: absolute;
  right: 30px;
  top: 15px;
  /* font-size: 150%; */
}

@media screen and (min-width: 768px) {
  .sidebar {
    width: 50%;
  }
}

@media screen and (min-width: 992px) {
  .sidebar {
    width: 35%;
  }
}

/* Homepage */

.index-content-container {
  padding-top: 70px;
}

.index-content-container h1 {
  color: var(--dark);
  font-size: 2.5rem;
}

.landing-container {
  text-align: center;
  padding-top: 40px;
  padding-right: 20px;
  padding-left: 20px;
  height: 70vh;
}

.index-headings-container {
  padding-left: 10px;
  padding-right: 10px;
  max-width: 290px;
  margin: 0 auto;
  padding-top: 10px;
  padding-bottom: 0px;
}

.cta-btn-container {
  text-align: center;
  max-width: 290px;
  margin: 0 auto;
  padding-top: 20px;
}

.cta-btn {
  margin-bottom: 20px;
  width: 140px;
  padding: 4px;
  border: 2px solid var(--blue);
  border-radius: 4px;
  font-size: 130%;
  background-color: var(--blue);
}

/* All products page */

.filter-sort {
  font-size: 150%;
  padding: 15px 0;
  letter-spacing: 1px;
  color: var(--dark);
  background-color: var(--lavender);
  border: 1px solid;
  border-radius: 0px;
}

.product-card {
  height: 370px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.image-container {
  width: 100%;
  margin-top: 15px;
}

.product-image {
  height: 180px;
  border: solid;
  width: 210px;
  object-fit: cover;
  padding-top: 13px;
  padding-left: 35px;
  margin-bottom: 10px;
}

.product-title {
  padding-left: 25px;
  padding-right: 25px;
}

.product-price {
  font-size: 1.25rem;
}

.product-heart {
  position: relative;
  top: -115px;
  right: 13px;
}

.filter-options {
  background-color: grey;
  height: 100vh;
  z-index: 50;
  position: fixed;
  width: 100vw;
  top: -105%;
  overflow-x: hidden;
  transition: 1.25s;
}

.filter-options.flexbox-container.\.filter-opened {
  top: 0;
}

div.products h1 {
  padding-top: var(--h1-padding);
  font-size: var(--h1-size);
  margin-bottom: 20px;
}

#sort {
  border-left: none;
}

@media screen and (min-width: 768px) {
  .filter-sort {
    margin-bottom: 20px;
  }
}

/* Product detail page */

.product-detail {
  padding-top: 50px;
}

.product-image-detail {
  height: 240px;
  width: 265px;
  padding-top: 10px;
  padding-left: 50px;
  margin-bottom: 20px;
}

.product-title-detail {
  /* font-size: 130%; */
  padding-right: 30px;
  padding-left: 30px;
  margin-bottom: 5px;
}

.product-price-detail {
  font-size: 1.5rem;
  margin-bottom: 5px;
}

.form-row {
  margin-bottom: 20px;
}

/* .product-quantity-outer {
  margin-bottom: 15px;
} */

.product-description {
  padding: 0px 25px;
}

/* Toasts */

.message-container {
  position: fixed;
  top: 70px;
  right: 15px;
  z-index: 9999;
}

.custom-toast {
  overflow: visible;
}

.toast-capper {
  height: 2px;
}

